@@ -1,3 +1,12 @@
+Thu Aug  3 20:38:39 UTC 2006  Nanbor Wang  <nanbor (at) txcorp (dot) com>
+
+        * DAnCE/NodeManager/NodeManager_Impl.cpp:
+        * DAnCE/NodeApplicationManager/ImplementationInfo.cpp:
+        * DAnCE/NodeApplicationManager/Containers_Info_Map.cpp:
+        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
+          
+          Fixed RT-CCM support.  
+        
 Thu Aug  3 15:33:11 UTC 2006  Boris Kolpackov  <boris@kolpackov.net>
 
         * docs/cidlc.html:
